@@ -157,7 +157,7 @@ If
 exists,
 .B ezmlm-get will use
 .B qmail-qmqp(1)
-to send digests. Other messages are sent by the normal qmail mechanism.
+to send messages.
 
 If
 .I dir\fB/public
