@@ -91,6 +91,13 @@ If
 exists,
 .B ezmlm-warn
 exits without taking any action.
+
+If
+.I dir\fB/qmqpservers
+exists,
+.B ezmlm-warn will use
+.B qmail-qmqp(1)
+to send messages.
 .SH OPTIONS
 .TP
 .B \-d
